@@ -2,7 +2,7 @@
 //
 // ImageLib Sources
 // Copyright (C) 2000-2009 by Denton Woods
-// Last modified: 01/30/2009
+// Last modified: 03/07/2009
 //
 // Filename: src-IL/src/il_wal.c
 //
@@ -156,9 +156,7 @@ ILboolean iLoadWalInternal()
 	}
 
 	// Fixes all images, even mipmaps.
-	ilFixImage();
-
-	return IL_TRUE;
+	return ilFixImage();
 
 cleanup_error:
 	for (i = 0; i < 3; i++) {
